# university-projects

./: README.md
algorithms-and-data-structures/binary-heap/: BinaryHeap.h  Structs.h  main.cpp
algorithms-and-data-structures/stack-processor/: main.cpp
algorithms-and-data-structures/trie/: Trie.cpp  Trie.h  main.cpp
basics-of-computer-programming/jumping-frog/: config.txt  frogger.c
basics-of-computer-programming/snake-game/: snake.cpp
databases/db-initialization/: create.sql  delete.sql  drop.sql  insert.sql  update.sql
databases/db-querying/: queries.sql
databases/db-transactional-processing/: check.sql  read_committed_A.sql  read_committed_B.sql  serializable_A.sql  serializable_B.sql  setup.sql  (+1 more)
object-oriented-programming/virtual-world-cpp/: CMakeLists.txt
object-oriented-programming/virtual-world-cpp/include/: Human.h  Organism.h  Species.h  World.h
object-oriented-programming/virtual-world-cpp/include/animals/: Animal.h  Antelope.h  Fox.h  Sheep.h  Turtle.h  Wolf.h
object-oriented-programming/virtual-world-cpp/include/plants/: Belladonna.h  Grass.h  Guarana.h  Plant.h  Sosnowskys_Hogweed.h  Sow_Thistle.h
object-oriented-programming/virtual-world-cpp/src/: Human.cpp  Organism.cpp  World.cpp  main.cpp
object-oriented-programming/virtual-world-cpp/src/animals/: Animal.cpp  Antelope.cpp  Fox.cpp  Sheep.cpp  Turtle.cpp  Wolf.cpp
object-oriented-programming/virtual-world-cpp/src/plants/: Belladonna.cpp  Grass.cpp  Guarana.cpp  Plant.cpp  Sosnowskys_Hogweed.cpp  Sow_Thistle.cpp
software-engineering/: UML models - e-learning platform.qea
(+39 files in other folders)
